--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
 	"name": "language-antlers",
 	"displayName": "Statamic Antlers Templates",
 	"description": "Antlers Template Language Syntax Highlighter",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"icon": "icon.png",
 	"publisher": "ahdesign",
 	"engines": {
 		"vscode": "^1.0.0"
 	},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/addisonhall/ahdesign.antlers"
+  },
 	"keywords": [
 		"statamic",
 		"antlers",
