--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "contributes": {
         "languages": [
             {
-                "id": "antlers",
+                "id": "html",
                 "aliases": [
-                    "Statamic Antlers",
-                    "Antlers"
+                    "HTML (Statamic Antlers)",
+                    "antlers"
                 ],
                 "extensions": [
                     ".html",
@@ -38,7 +38,7 @@
         ],
         "grammars": [
             {
-                "language": "antlers",
+                "language": "html",
                 "scopeName": "text.html.statamic",
                 "path": "./syntaxes/antlers.json"
             }
