--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "template"
     ],
     "categories": [
-        "Languages"
+        "Programming Languages"
     ],
     "contributes": {
         "languages": [
